@@ -4,10 +4,11 @@ MANIFEST
 META.yml
 Makefile.PL
 README
+cpanfile
 dist.ini
 lib/Catalyst/Controller/DirectoryDispatch.pm
+t/00-compile.t
 t/01.basic.t
-t/author-critic.t
 t/lib/TestDirectoryDispatch.pm
 t/lib/TestDirectoryDispatch/Controller/Basic.pm
 t/lib/TestDirectoryDispatch/Controller/DataRoot.pm
@@ -15,4 +16,3 @@ t/lib/TestDirectoryDispatch/Controller/Filter.pm
 t/lib/TestDirectoryDispatch/Controller/FullPaths.pm
 t/lib/TestDirectoryDispatch/Controller/Process.pm
 t/lib/TestDirectoryDispatch/Controller/Root.pm
-t/release-pod-syntax.t
