@@ -3,16 +3,16 @@ abstract: 'Simple directory listing with built in url dispatching'
 author:
   - 'Andy Gorman <agorman@cpan.org>'
 build_requires:
-  Catalyst: 0
-  Catalyst::Runtime: 5.80
-  English: 0
+  File::Spec: 0
+  IO::Handle: 0
+  IPC::Open3: 0
+  JSON::Any: 0
   Test::More: 0
   Test::WWW::Mechanize::Catalyst: 0
-  perl: 5.6.0
 configure_requires:
-  ExtUtils::MakeMaker: 6.31
+  ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.102340, CPAN::Meta::Converter version 2.101670'
+generated_by: 'Dist::Zilla version 5.006, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -20,14 +20,9 @@ meta-spec:
 name: Catalyst-Controller-DirectoryDispatch
 requires:
   Catalyst::Action::Serialize: 0.83
-  Catalyst::Controller: 0
   Catalyst::Runtime: 5.7010
-  JSON::Any: 0
-  Moose: 0
-  Test::Deep: 0.104
-  Test::More: 0.88
-  Test::WWW::Mechanize: 0.20
-  Test::WWW::Mechanize::Catalyst: 0.37
-  Try::Tiny: 0
-  namespace::autoclean: 0
-version: 1.0
+resources:
+  bugtracker: https://github.com/agorman/Catalyst-Controller-DirectoryDispatch/issues
+  homepage: http://search.cpan.org/~agorman/Catalyst-Controller-DirectoryDispatch-1.0
+  repository: git://github.com/agorman/Catalyst-Controller-DirectoryDispatch.git
+version: 1.01
