@@ -1,23 +1,52 @@
 name					= Catalyst-Controller-DirectoryDispatch
 author					= Andy Gorman <agorman@cpan.org>
 license					= Perl_5
-copyright_holder			= Andy Gorman
-copyright_year				= 2010
-version					= 1.0
+copyright_holder		= Andy Gorman
+copyright_year			= 2010
+version					= 1.01
 
-[@Filter]
--bundle = @Basic
--remove = Readme
-[AutoPrereq]
-[Prereq]
-Catalyst::Runtime = 5.7010
-Catalyst::Action::Serialize = 0.83
-Test::WWW::Mechanize = 0.20
-Test::WWW::Mechanize::Catalyst = 0.37
-Test::Deep = 0.104
-Test::More = 0.88
-[CriticTests]
-[PodSyntaxTests]
+[GatherDir]
+  exclude_filename = README.pod
+
+[PruneCruft]
+[ManifestSkip]
+[MetaYAML]
+[License]
+[ExtraTests]
+[ExecDir]
+[ShareDir]
+[MakeMaker]
+[Manifest]
+
+[CPANFile]
+[PodWeaver]
+[ReadmeFromPod]
+
+[PkgVersion]
 [TestRelease]
-[NextRelease]
+[Test::Compile]
 [ConfirmRelease]
+
+[GitHub::Meta]
+  repo = %N
+
+[Git::Commit]
+[Git::CommitBuild]
+  release_branch = releases
+
+[Git::Tag]
+  tag_format = v%v
+  branch = releases
+
+[UploadToCPAN]
+
+[Git::Push]
+
+[Prereqs / RuntimeRequires]
+  Catalyst::Runtime           = 5.7010
+  Catalyst::Action::Serialize = 0.83
+
+[Prereqs / TestRequires]
+  Test::More                     = 0
+  Test::WWW::Mechanize::Catalyst = 0
+  JSON::Any                      = 0
