@@ -1,4 +1,7 @@
 package Catalyst::Controller::DirectoryDispatch;
+{
+  $Catalyst::Controller::DirectoryDispatch::VERSION = '1.01';
+}
 # ABSTRACT: Simple directory listing with built in url dispatching
 
 use Moose;
@@ -19,26 +22,26 @@ __PACKAGE__->config(
 
 
 has 'root' => (
-	is      => 'ro',
-	isa     => 'Str',
-	default => '/',
+    is      => 'ro',
+    isa     => 'Str',
+    default => '/',
 );
 
 has 'full_paths' => (
-	is      => 'ro',
-	isa     => 'Bool',
-	default => 0,
+    is      => 'ro',
+    isa     => 'Bool',
+    default => 0,
 );
 
 has 'filter' => (
-	is      => 'ro',
-	isa     => 'RegexpRef',
+    is      => 'ro',
+    isa     => 'RegexpRef',
 );
 
 has 'data_root' => (
-	is      => 'ro',
-	isa     => 'Str',
-	default => 'data',
+    is      => 'ro',
+    isa     => 'Str',
+    default => 'data',
 );
 
 
@@ -46,48 +49,48 @@ sub setup :Chained('specify.in.subclass.config') :CaptureArgs(0) :PathPart('spec
 
 
 sub list :Chained('setup') :PathPart('') :Args {
-	my $self = shift;
-	my $c = shift;
+    my $self = shift;
+    my $c = shift;
 
-	my $path = join '/', @_;
-	$path = "/$path" if ($path);
-	my $full_path = $self->root . $path;
+    my $path = join '/', @_;
+    $path = "/$path" if ($path);
+    my $full_path = $self->root . $path;
 
-	my $regexp = $self->filter;
-	my $files = [];
+    my $regexp = $self->filter;
+    my $files = [];
 
-	try {
-		opendir (my $dir, $full_path) or die;
-		$files = [ readdir $dir ];
-		closedir $dir;
-	} catch {
-		$c->stash->{response} = {"error" => "Failed to open directory '$full_path'", "success" => JSON::Any::false};
-		$c->detach('serialize');
-	};
+    try {
+        opendir (my $dir, $full_path) or die;
+        $files = [ readdir $dir ];
+        closedir $dir;
+    } catch {
+        $c->stash->{response} = {"error" => "Failed to open directory '$full_path'", "success" => JSON::Any::false};
+        $c->detach('serialize');
+    };
 
-	$files = [ grep { !/$regexp/ } @$files ] if ($regexp);
+    $files = [ grep { !/$regexp/ } @$files ] if ($regexp);
 
-	$files = [ map { "$path/$_" } @$files ] if ($self->full_paths);
+    $files = [ map { "$path/$_" } @$files ] if ($self->full_paths);
 
-	$files = $self->process_files($c, $files);
+    $files = $self->process_files($c, $files);
 
-	$c->stash->{response}->{$self->data_root} = $files;
-	$c->stash->{response}->{success} = JSON::Any::true;
+    $c->stash->{response}->{$self->data_root} = $files;
+    $c->stash->{response}->{success} = JSON::Any::true;
 }
 
 
 sub process_files {
-	my ( $self, $c, $files ) = @_;
-	
-	return $files;
+    my ( $self, $c, $files ) = @_;
+
+    return $files;
 }
 
 
 sub end :Privete {
-	my ( $self, $c ) = @_;
-	
-	$c->res->status(200);
-	$c->forward('serialize');
+    my ( $self, $c ) = @_;
+
+    $c->res->status(200);
+    $c->forward('serialize');
 }
 
 
@@ -99,23 +102,31 @@ __PACKAGE__->meta->make_immutable;
 
 __END__
 
+=pod
+
+=encoding UTF-8
+
 =head1 NAME
 
-Catalyst::Controller::DirectoryDispatch - A controller for browsing system directories
+Catalyst::Controller::DirectoryDispatch - Simple directory listing with built in url dispatching
+
+=head1 VERSION
+
+version 1.01
 
 =head1 SYNOPSIS
 
-	package MyApp::Controller::Browser::Example;
-	use Moose;	
-	BEGIN { extends 'Catalyst::Controller::DirectoryDispatch' }
-	
-	__PACKAGE__->config(
-		action => { setup => { Chained => '/browser/base', PathPart => 'mydir' } },
-		root     => '/home/andy',
-		filter     => qr{^\.|.conf$},
-		data_root  => 'data',
-		full_paths => 1,
-	);
+    package MyApp::Controller::Browser::Example;
+    use Moose;
+    BEGIN { extends 'Catalyst::Controller::DirectoryDispatch' }
+
+    __PACKAGE__->config(
+        action => { setup => { Chained => '/browser/base', PathPart => 'mydir' } },
+        root     => '/home/andy',
+        filter     => qr{^\.|.conf$},
+        data_root  => 'data',
+        full_paths => 1,
+    );
 
 =head1 DESCRIPTION
 
@@ -125,15 +136,15 @@ Provides a simple configuration based controller for listing local system direct
 
 If you created the controller at http://localhost/mydir and set root to '/home/user1' then browsing to the controller might give the following output:
 
-	{
-		"success":true,
-		"data":[
-			"file1",
-			"file2",
-			"dir1",
-			"dir2"
-		],
-	}
+    {
+        "success":true,
+        "data":[
+            "file1",
+            "file2",
+            "dir1",
+            "dir2"
+        ],
+    }
 
 You could then point your browser to http://localhost/mydir/dir1 to get a directory listing of the folder '/home/user1/dir1' and so on...
 
@@ -141,32 +152,32 @@ You could then point your browser to http://localhost/mydir/dir1 to get a direct
 
 The default view for DirectoryDispatch serializes the file list as JSON but it's easy to change it to whatever view you'd like.
 
-	__PACKAGE__->config(
-	    'default'   => 'text/html',
-	    'map'       => {
-	    	'text/html' => [ 'View', 'TT' ],
-	    }
-	);
+    __PACKAGE__->config(
+        'default'   => 'text/html',
+        'map'       => {
+            'text/html' => [ 'View', 'TT' ],
+        }
+    );
 
 Then in your template...
 
-	[% FOREACH node IN response.data %]
-	[% node %]
-	[% END %]
+    [% FOREACH node IN response.data %]
+    [% node %]
+    [% END %]
 
 =head2 Post Processing
 
 If you need to process the files in anyway before they're passed to the view you can override process_files in your controller.
 
-	sub process_files {
-		my ($self, $c, $files) = @_;
+    sub process_files {
+        my ($self, $c, $files) = @_;
 
-		foreach my $file ( @$files ) {
-			# Modify $file
-		}
+        foreach my $file ( @$files ) {
+            # Modify $file
+        }
 
-		return $files;
-	}
+        return $files;
+    }
 
 This is the last thing that happens before the list of files are passed on to the view. $files is sent in as an ArrayRef[Str] but you
 are free to return any thing you want as long as the serializer you're using can handle it.
@@ -175,37 +186,41 @@ are free to return any thing you want as long as the serializer you're using can
 
 =head2 root
 
-	is: ro, isa: Str
+    is: ro, isa: Str
 
 The folder that will be listed when accessing the controller (default '/').
 
 =head2 filter
 
-	is: ro, isa: RegexpRef
+    is: ro, isa: RegexpRef
 
 A regular expression that will remove matching files or folders from the directory listing (default: undef).
 
 =head2 data_root
 
-	is: ro, isa: Str
+    is: ro, isa: Str
 
 The name of the key inside $c->stash->{response} where the directory listing will be stored (default: data).
 
 =head2 full_paths
 
-	is: ro, isa: Bool
+    is: ro, isa: Bool
 
 Returns full paths for the directory listing rather than just the names (default: 0).
-
-=head1 AUTHOR
-
-Andy Gorman, agorman@cpan.org
 
 =head1 THANKS
 
 The design for this module was heavly influenced by the fantastic L<Catalyst::Controller::DBIC::API>.
 
+=head1 AUTHOR
+
+Andy Gorman <agorman@cpan.org>
+
 =head1 COPYRIGHT AND LICENSE
+
+This software is copyright (c) 2010 by Andy Gorman.
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
+
+=cut
